# full-stack-rideshare

./: .gitignore  COMPREHENSIVE_ANALYSIS_REPORT.md  CONTRIBUTION_TEST.md  FEATURE_IMPLEMENTATION_COMPLETE.md  FLUTTER_CODE_QUALITY_FIXES.md  GITHUB_CONTRIBUTION_FIX.md  GITHUB_PUSH_COMMANDS.md  MODERN_PHONE_INPUT_GUIDE.md  PHONE_INPUT_MODERNIZATION_COMPLETE.md  PROJECT_COMPLETE_SUMMARY.md  README.md  pyrightconfig.json
backend/: .env.development  .env.example  .env.production.template  VIRTUAL_ENV_GUIDE.md  __init__.py  pyproject.toml  requirements.txt  test_advanced_api.py  test_api_comprehensive.py  test_complete_api.py  test_imports.py  test_smart_ride_features.py
backend/accounts/: additional_models.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_promocode_emergencycontact_notification_sos_and_more.py  0004_remove_promocodeuse_promo_code_and_more.py  0004_remove_review_driving_quality.py
backend/drivers/: models.py  serializers.py  urls.py  views.py
backend/drivers/migrations/: 0001_initial.py
backend/payments/: models.py  serializers.py  urls.py  views.py
backend/payments/migrations/: 0001_initial.py  0002_alter_refund_id.py
backend/rides/: admin.py  admin_api_views.py  advanced_api_views.py  api_views.py  consumers.py  models.py  models_backup.py  models_new.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/rides/migrations/: 0001_initial.py  0002_ridetemplate_scheduledride_smartsuggestion_and_more.py
backend/rideshare/: asgi.py  middleware.py  settings.py  urls.py
(+10 files in other folders)
